Cabal-Version:      2.4
Name:               stable-coin-starter
Version:            0.1.0.0
Author:              Nabin Pokhrel
Maintainer:          nabin6246@gmail.com
Build-Type:          Simple
Copyright:           © 2021 Nabin Pokhrel
License:             Apache-2.0
License-files:       LICENSE

library
  hs-source-dirs:      src
  exposed-modules:     Plutus.Contracts.Coins.CoinsStateMachine
                       Plutus.Contracts.Coins.Types
                       Plutus.Contracts.Coins.Endpoints
                       Plutus.Contracts.Oracle.Core
                       Plutus.Contracts.Utils.RatioUtils
                     
  build-depends:       aeson
                     , base >=4.9 && <5
                     , containers
                     , data-default
                     , lens
                     , freer-extras
                     , playground-common
                     , plutus-contract
                     , plutus-ledger
                     , plutus-ledger-api
                     , plutus-ledger-constraints
                     , plutus-tx-plugin
                     , plutus-tx
                     , text
                     , bytestring
                     , plutus-use-cases
                     , prettyprinter
                     , openapi3
                     , cardano-api
                     , serialise


  default-language:    Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise

executable stablecoin-pab
  main-is: Main.hs
  hs-source-dirs: pab
  ghc-options:         -Wall
  build-depends:       aeson
                     , base >=4.9 && <5
                     , lens
                     , plutus-ledger
                     , plutus-pab         
                     , plutus-tx
                     , req ^>= 3.9.0
                     , text -any
                     , bytestring
                     , uuid
                     , containers
                     , freer-extras
                     , freer-simple -any
                     , prettyprinter -any
                     , plutus-contract -any
                     , stable-coin-starter
                     , plutus-use-cases
                     , plutus-ledger-constraints
                     , data-default -any
                     , openapi3
  default-language:    Haskell2010

executable trace
  main-is: Main.hs
  hs-source-dirs: emulator
  ghc-options:         -Wall
  other-modules:
    Config
  build-depends:       aeson
                     , base >=4.9 && <5
                     , lens
                     , plutus-ledger
                     , plutus-pab         
                     , plutus-tx
                     , req ^>= 3.9.0
                     , text -any
                     , bytestring
                     , uuid
                     , containers
                     , freer-extras
                     , freer-simple -any
                     , prettyprinter -any
                     , plutus-contract -any
                     , plutus-use-cases
                     , plutus-ledger-constraints
                     , data-default -any
                     , stable-coin-starter
                     , openapi3

  default-language:    Haskell2010


executable oracle-client
  main-is: oracle-client.hs
  hs-source-dirs:      pab
  ghc-options:         -Wall
  default-language:    Haskell2010
  build-depends:       base ^>= 4.14.1.0
                     , bytestring
                     , regex-tdfa ^>= 1.3.1.0
                     , req ^>= 3.9.0
                     , text
                     , uuid

test-suite stablecoin-tests
  Type:                exitcode-stdio-1.0
  Ghc-options:         -Wall -threaded -rtsopts
  Default-Language:    Haskell2010
  Build-Depends:       base              >=4.9 && <5
                     , data-default
                     , freer-extras
                     , freer-simple
                     , lens
                     , stable-coin-starter
                     , mtl
                     , containers
                     , playground-common
                     , plutus-core
                     , plutus-contract
                     , plutus-ledger
                     , plutus-tx
                     , plutus-ledger-api
                     , plutus-tx-plugin
                     , plutus-pab
                     , plutus-contract
                     , prettyprinter
                     , pretty-show
                     , tasty
                     , tasty-hunit
                     , tasty-expected-failure
                     , text
                     , foldl
                     , aeson
                     , plutus-ledger-constraints
                     , openapi3


  hs-source-dirs:      src/test
  Main-is:             Spec.hs
  Other-modules:
                       Spec.StableCoinTest
                       Spec.OracleTest
                       Utils.ValidatorTestFramework

executable stable-io
  hs-source-dirs:      testnet
  ghc-options:         -Wall -threaded -rtsopts
  default-Language:    Haskell2010
  Main-is:             Main.hs
  build-depends:       aeson
                     , base              >=4.9 && <5
                     , containers
                     , data-default
                     , lens
                     , freer-extras
                     , playground-common
                     , plutus-contract
                     , plutus-ledger
                     , plutus-ledger-api
                     , plutus-ledger-constraints
                     , plutus-tx-plugin
                     , plutus-tx
                     , text
                     , bytestring
                     , cardano-api
                     , stable-coin-starter
                     , easy-cardano



