cabal-version:      2.4
name:               nft-market
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license: Apache-2.0
license-files: LICENSE
author:             Your name
maintainer:         Your email

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

library
    exposed-modules:
      Contracts.NFT
      Contracts.NFT.Types
      Contracts.NFT.OnChain
      Contracts.NFT.OffChain
      Contracts.NFT.NFTCurrency
    build-depends:
      base >= 4.9 && < 5,
      aeson,
      bytestring,
      base64-bytestring,
      text -any,
      lens -any,
      containers -any,
      playground-common,
      plutus-contract,
      plutus-tx-plugin,
      plutus-tx,
      plutus-ledger,
      plutus-ledger-api,
      plutus-use-cases,
    hs-source-dirs: src src/Contracts/NFT
    default-language: Haskell2010
    ghc-options:
            -- See Plutus Tx readme
            -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas

test-suite plutus-example-projects-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: src/test
  other-modules:
    Spec.NFT
    Spec.MockNFTCurrency
    Spec.Helper
  default-language: Haskell2010
  ghc-options: -Wall -Wnoncanonical-monad-instances
              -Wincomplete-uni-patterns -Wincomplete-record-updates
              -Wredundant-constraints -Widentities -rtsopts
              -- See Plutus Tx readme
              -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
  build-depends:
    nft-market -any,
    playground-common,
    plutus-tx -any,
    plutus-tx-plugin,
    plutus-contract -any,
    plutus-ledger -any,
    plutus-use-cases -any
  build-depends:
    aeson -any,
    base >=4.9 && <5,
    base64-bytestring,
    bytestring,
    freer-extras,
    lens -any,
    text -any,
    tasty -any,
    tasty-hunit -any,
    tasty-hedgehog >=0.2.0.0

executable nft-market-pab
  main-is: Main.hs
  hs-source-dirs: pab
  ghc-options:
    -threaded
  build-depends:
    base >= 4.9 && < 5,
    bytestring,
    base64-bytestring,
    data-default -any,
    text -any,
    containers -any,
    lens -any,
    servant-client -any,
    plutus-contract -any,
    plutus-pab -any,
    nft-market -any,
    aeson -any,
    freer-simple -any,
    prettyprinter -any,
    freer-extras -any,
    plutus-ledger -any,
    stm -any,

-- executable create-build
  -- hs-source-dirs: 
  --   app
  -- main-is: build.hs
  -- ghc-options:
  --   -threaded
  -- build-depends:  
  --   base >= 4.9 && < 5,      
  --   cardano-api,
  --   cardano-ledger-alonzo,
  --   nft-market -any,
  --   plutus-ledger-api,
  --   bytestring