cabal-version:      2.4
name:               plutus-starter
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license: Apache-2.0
license-files: LICENSE
author:             Your name
maintainer:         Your email

flag defer-plugin-errors
  description:
      Defer errors from the plugin, useful for things like Haddock that can't handle it.
  default: False
  manual: True

common lang
  default-language:   Haskell2010
  ghc-options:
    -Wall -Wnoncanonical-monad-instances
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities -rtsopts
    -- See Plutus Tx readme
    -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
  if flag(defer-plugin-errors)
      ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

library
    import: lang
    exposed-modules:
      Contracts.NFT
      Contracts.NFT.Types
      Contracts.NFT.OnChain
      Contracts.NFT.OffChain
      Contracts.NFT.NFTCurrency
    build-depends:
      base >= 4.9 && < 5,
      aeson,
      bytestring,
      base64-bytestring,
      containers -any,
      text -any,
      lens -any,
      openapi3 -any,
      playground-common,
      plutus-contract,
      plutus-tx-plugin,
      plutus-tx,
      plutus-ledger,
      plutus-ledger-api,
      plutus-use-cases,
    hs-source-dirs: src src/Contracts/NFT
    default-language: Haskell2010

test-suite plutus-example-projects-test
  import: lang
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: src/test
  other-modules:
    Spec.NFT
    Spec.MockNFTCurrency
    Spec.Helper
  default-language: Haskell2010
  build-depends:
    plutus-starter -any,
    playground-common,
    plutus-tx -any,
    plutus-tx-plugin,
    plutus-ledger-api,
    plutus-contract -any,
    plutus-ledger -any,
    plutus-use-cases -any
  build-depends:
    aeson -any,
    base >=4.9 && <5,
    base64-bytestring,
    bytestring,
    freer-extras,
    lens -any,
    text -any,
    tasty -any,
    tasty-hunit -any,
    tasty-hedgehog >=0.2.0.0

executable simulator-nft-market-pab
  import: lang
  main-is: Main.hs
  hs-source-dirs: pab-simulator
  ghc-options:
    -threaded
  build-depends:
    base >= 4.9 && < 5,
    bytestring,
    base64-bytestring,
    data-default -any,
    text -any,
    containers -any,
    lens -any,
    openapi3 -any,
    servant-client -any,
    plutus-contract -any,
    plutus-pab -any,
    plutus-starter -any,
    aeson -any,
    freer-simple -any,
    prettyprinter -any,
    freer-extras -any,
    plutus-ledger -any,
    stm -any,

executable testnet-nft-pab
  import: lang
  main-is: Main.hs
  hs-source-dirs: pab-testnet
  other-modules:
    Contracts
  ghc-options:
    -threaded
  build-depends:
    base >= 4.9 && < 5,
    bytestring,
    data-default -any,
    containers -any,
    text -any,
    openapi3 -any,
    plutus-starter,
    playground-common -any,
    plutus-contract -any,
    plutus-pab -any,
    plutus-use-cases -any,
    prettyprinter -any,
    purescript-bridge,
    row-types,
    servant-purescript,
    aeson -any,
    freer-simple -any,
    freer-extras -any,
    plutus-ledger -any,