cabal-version:      2.4
name:               plutus-starter
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license: Apache-2.0
license-files: LICENSE
author:             Your name
maintainer:         Your email

flag defer-plugin-errors
    description:
        Defer errors from the plugin, useful for things like Haddock that can't handle it.
    default: False
    manual: True
-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

common lang
    default-language:   Haskell2010
    ghc-options:
      -Wall -Wnoncanonical-monad-instances
      -Wincomplete-uni-patterns -Wincomplete-record-updates
      -Wredundant-constraints -Widentities -rtsopts
      -- See Plutus Tx readme
      -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    if flag(defer-plugin-errors)
        ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

library
    import: lang
    exposed-modules:
      Contracts.Oracle.Types
      Contracts.Oracle.RequestToken
      Contracts.Oracle.OnChain
      Contracts.Oracle.OffChain
      Contracts.Oracle
      Contracts.MutualBet
      Contracts.MutualBet.Types
      Contracts.MutualBet.OffChain
      Contracts.MutualBet.StateMachine
      Types.Game
    build-depends:
      aeson,
      base >= 4.9 && < 5,
      bytestring,
      base64-bytestring,
      cardano-api -any,
      cardano-crypto -any,
      containers -any,
      data-default -any,
      text -any,
      lens -any,
      openapi3 -any,
      semigroups -any,
      serialise,
      playground-common,
      plutus-contract,
      plutus-tx-plugin,
      plutus-tx,
      plutus-ledger,
      plutus-ledger-api,
      plutus-chain-index,
      plutus-use-cases,

    hs-source-dirs: src src/Contracts/MutualBet
    default-language: Haskell2010
    ghc-options:
            -- See Plutus Tx readme
            -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas

test-suite plutus-example-projects-test
  import: lang
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: src/test
  other-modules:
    Spec.MutualBet
  build-depends:
    plutus-starter -any,
    playground-common,
    plutus-tx -any,
    plutus-tx-plugin,
    plutus-contract -any,
    plutus-ledger -any,
    plutus-use-cases -any
  build-depends:
    aeson -any,
    base >=4.9 && <5,
    base64-bytestring,
    bytestring,
    data-default,
    foldl,
    freer-extras,
    freer-simple -any,
    lens -any,
    sort -any,
    streaming -any,
    text -any,
    tasty -any,
    tasty-hunit -any,
    tasty-hedgehog >=0.2.0.0

executable bet-pab
  import: lang 
  main-is: Main.hs
  hs-source-dirs: pab
  other-modules:
    GameClient
  ghc-options:
    -threaded
  build-depends:
    base >= 4.9 && < 5,
    bytestring,
    base64-bytestring,
    containers -any,
    data-default -any,
    text -any,
    lens -any,
    openapi3 -any,
    playground-common,
    plutus-contract -any,
    plutus-pab -any,
    plutus-starter,
    aeson -any,
    freer-simple -any,
    prettyprinter -any,
    freer-extras -any,
    plutus-ledger -any,
    plutus-use-cases,
    stm -any,
    req -any,

executable gs
  import: lang
  main-is: GenerateOracleScript.hs
  hs-source-dirs: pab
  ghc-options:  -threaded
  build-depends:        
    aeson, 
    base >= 4.9 && < 5,
    cardano-api, 
    cardano-ledger-alonzo,
    plutus-starter,
    plutus-contract,
    plutus-ledger,
    plutus-ledger-api,
    plutus-tx,
    bytestring
  
executable gameserver
  import: lang
  main-is: Server.hs
  other-modules:
    Service
  hs-source-dirs: gameserver
  ghc-options:  -threaded
  build-depends:        
    aeson, 
    aeson-pretty,
    base >= 4.9 && < 5,
    bytestring,
    data-default -any,
    either,
    lens,
    mtl,
    plutus-starter,
    servant-server -any,
    text -any,
    utf8-string,
    warp
 
-- executable gamesclient
--   import: lang
--   main-is: GameClient.hs
--   hs-source-dirs: pab
--   ghc-options:  -threaded
--   build-depends:        
--     aeson, 
--     base >= 4.9 && < 5,
--     bytestring,
--     plutus-starter,
--     text -any,
--     req

executable mutualbetserver
  import: lang
  main-is: MutualBetServer.hs
  hs-source-dirs: pab
  ghc-options:  -threaded
  build-depends:        
    aeson, 
    aeson-pretty,
    base >= 4.9 && < 5,
    bytestring,
    data-default -any,
    either,
    lens,
    mtl,
    plutus-starter,
    servant-server -any,
    plutus-contract,
    plutus-ledger,
    plutus-tx,
    text -any,
    utf8-string,
    warp,
