cabal-version:      2.4
name:               plutus-starter
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license: Apache-2.0
license-files: LICENSE
author:             Your name
maintainer:         Your email

flag defer-plugin-errors
    description:
        Defer errors from the plugin, useful for things like Haddock that can't handle it.
    default: False
    manual: True
-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

common lang
  default-language:   Haskell2010
  ghc-options:
    -Wall -Wnoncanonical-monad-instances
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities -rtsopts
    -- See Plutus Tx readme
    -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
  if flag(defer-plugin-errors)
      ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

library
    import: lang
    exposed-modules:
      Contracts.Oracle.Types
      Contracts.Oracle.RequestToken
      Contracts.Oracle.OnChain
      Contracts.Oracle.OffChain
      Contracts.Oracle.Conversion
      Contracts.Oracle
      Contracts.MutualBetSM
      Contracts.MutualBetSM.Types
      Contracts.MutualBetSM.OffChain
      Contracts.MutualBetSM.StateMachine
      Contracts.MutualBet
      Contracts.MutualBet.Types
      Contracts.MutualBet.OffChain
      Contracts.MutualBet.OnChain
      Contracts.MutualBet.Currency
      PabContracts.SimulatorPabContracts
      PabContracts.SimulatorPabContractsSM
      PabContracts.MutualBetContracts
      PabContracts.MutualBetContractsSM
      PabContracts.OracleContracts
      Services.GameClient
      Types.Game
    build-depends:
      aeson,
      base >= 4.9 && < 5,
      bytestring,
      base64-bytestring,
      bech32,
      cardano-addresses,
      cardano-api -any,
      cardano-crypto -any,
      containers -any,
      data-default -any,
      freer-simple,
      text -any,
      lens -any,
      openapi3 -any,
      semigroups -any,
      serialise,
      row-types,
      req,
      playground-common,
      plutus-contract,
      plutus-tx-plugin,
      plutus-tx,
      plutus-ledger,
      plutus-ledger-constraints,
      plutus-ledger-api,
      plutus-chain-index,
      plutus-chain-index-core,
      plutus-pab,
      purescript-bridge,
      prettyprinter,
      plutus-use-cases,

    hs-source-dirs: src src/
    default-language: Haskell2010
    ghc-options:
            -- See Plutus Tx readme
            -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas

test-suite plutus-example-projects-test
  import: lang
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: src/test
  other-modules:
    Spec.MutualBetSM
    Spec.MutualBet
    Spec.Oracle
  build-depends:
    plutus-starter -any,
    playground-common,
    plutus-tx -any,
    plutus-tx-plugin,
    plutus-contract -any,
    plutus-ledger -any,
    plutus-use-cases -any
  build-depends:
    aeson -any,
    base >=4.9 && <5,
    base64-bytestring,
    bytestring,
    cardano-crypto-class,
    data-default,
    foldl,
    freer-extras,
    freer-simple -any,
    lens -any,
    sort -any,
    streaming -any,
    text -any,
    tasty -any,
    tasty-hunit -any,
    tasty-hedgehog >=0.2.0.0

executable pab-simulator
  import: lang 
  main-is: Main.hs
  other-modules:
    MainSM
  hs-source-dirs: pab-simulator
  ghc-options:
    -threaded
  build-depends:
    base >= 4.9 && < 5,
    bytestring,
    base64-bytestring,
    containers -any,
    data-default -any,
    text -any,
    lens -any,
    openapi3 -any,
    playground-common -any,
    plutus-contract -any,
    plutus-pab -any,
    plutus-starter,
    aeson -any,
    freer-simple -any,
    purescript-bridge,
    prettyprinter -any,
    freer-extras -any,
    plutus-ledger -any,
    plutus-use-cases,
    stm -any,
    row-types,

executable mock-wallet
  import: lang 
  main-is: Main.hs
  hs-source-dirs: pab-simulator/mock-wallet
  ghc-options:
    -threaded
  build-depends:
    base >= 4.9 && < 5,
    plutus-contract,
    plutus-pab -any,
    plutus-starter
    
executable testnet-oracle-pab
  import: lang 
  main-is: Main.hs
  hs-source-dirs: pab-testnet/oracle
  ghc-options:
    -threaded
  build-depends:
      base >= 4.9 && < 5,
      bytestring,
      data-default -any,
      containers -any,
      text -any,
      openapi3 -any,
      plutus-starter,
      playground-common -any,
      plutus-contract -any,
      plutus-pab -any,
      plutus-ledger,
      plutus-use-cases -any,
      prettyprinter -any,
      purescript-bridge,
      row-types,
      servant-purescript,
      aeson -any,
      freer-simple -any,
      freer-extras -any,
      plutus-ledger -any,

executable testnet-mutual-bet-pab
  import: lang 
  main-is: Main.hs
  hs-source-dirs: pab-testnet/mutual-bet
  ghc-options:
    -threaded
  build-depends:
      base >= 4.9 && < 5,
      bytestring,
      data-default -any,
      containers -any,
      text -any,
      openapi3 -any,
      plutus-starter,
      playground-common -any,
      plutus-contract -any,
      plutus-pab -any,
      plutus-ledger,
      plutus-use-cases -any,
      prettyprinter -any,
      purescript-bridge,
      row-types,
      servant-purescript,
      aeson -any,
      freer-simple -any,
      freer-extras -any,
      plutus-ledger -any,

executable testnet-both-pab
  import: lang 
  main-is: Main.hs
  hs-source-dirs: pab-testnet/both
  ghc-options:
    -threaded
  build-depends:
      base >= 4.9 && < 5,
      bytestring,
      data-default -any,
      containers -any,
      text -any,
      openapi3 -any,
      plutus-starter,
      playground-common -any,
      plutus-contract -any,
      plutus-pab -any,
      plutus-ledger,
      plutus-use-cases -any,
      prettyprinter -any,
      purescript-bridge,
      row-types,
      servant-purescript,
      aeson -any,
      freer-simple -any,
      freer-extras -any,
      plutus-ledger -any,

executable gs
  import: lang
  main-is: GenerateOracleScript.hs
  hs-source-dirs: cli-demo
  ghc-options:  -threaded
  build-depends:        
    aeson, 
    base >= 4.9 && < 5,
    cardano-api, 
    cardano-crypto,
    cardano-ledger-alonzo,
    plutus-starter,
    plutus-contract,
    plutus-ledger,
    base16-bytestring,
    plutus-ledger-api,
    text-class,
    text,
    plutus-tx,
    cardano-wallet-core,
    bytestring

executable encode-oracle-request
  import: lang
  main-is: EncodeOracleRequest.hs
  hs-source-dirs: cli-demo
  ghc-options:  -threaded
  build-depends:        
    aeson, 
    base >= 4.9 && < 5,
    cardano-api, 
    cardano-node,
    cryptonite,
    cardano-crypto,
    cardano-addresses,
    cardano-addresses-cli,
    cardano-ledger-alonzo,
    plutus-starter,
    cardano-ledger-core,
    plutus-contract,
    cardano-crypto-class,
    plutus-ledger,
    plutus-ledger-api,
    plutus-tx,
    bytestring,
    text,
    utf8-string

executable verify-datum
  import: lang
  main-is: VerifyDatum.hs
  hs-source-dirs: cli-demo
  ghc-options:  -threaded
  build-depends:        
    aeson, 
    base >= 4.9 && < 5,
    cardano-api, 
    cardano-node,
    cryptonite,
    cardano-crypto,
    cardano-addresses,
    cardano-addresses-cli,
    cardano-ledger-alonzo,
    plutus-starter,
    cardano-ledger-core,
    plutus-contract,
    cardano-crypto-class,
    plutus-ledger,
    plutus-ledger-api,
    plutus-tx,
    bytestring,
    text,
    utf8-string

executable encode-oracle-keys
  import: lang
  main-is: EncodeOracleKeys.hs
  hs-source-dirs: pab-testnet/oracle
  ghc-options:  -threaded
  build-depends:        
    aeson, 
    base >= 4.9 && < 5,
    bech32,
    freer-simple,
    cardano-api, 
    cardano-node,
    cardano-crypto,
    cardano-addresses,
    cardano-addresses-cli,
    cardano-ledger-alonzo,
    plutus-starter,
    cardano-ledger-core,
    plutus-contract,
    cardano-crypto-class,
    plutus-ledger,
    plutus-ledger-api,
    plutus-tx,
    text,
    bytestring

executable gameserver
  import: lang
  main-is: Server.hs
  other-modules:
    Service
  hs-source-dirs: servers/game
  ghc-options:  -threaded
  build-depends:        
    aeson, 
    aeson-pretty,
    base >= 4.9 && < 5,
    bytestring,
    data-default -any,
    either,
    lens,
    mtl,
    plutus-starter,
    servant-server -any,
    text -any,
    utf8-string,
    warp

executable oraclegameserver
  import: lang
  main-is: OracleGameServer.hs
  hs-source-dirs: servers/oracle
  ghc-options:  -threaded
  build-depends:        
    aeson, 
    aeson-pretty,
    base >= 4.9 && < 5,
    bytestring,
    data-default -any,
    row-types,
    either,
    freer-simple,
    lens,
    mtl,
    openapi3,
    plutus-contract,
    plutus-starter,
    plutus-ledger,
    plutus-use-cases,
    playground-common,
    plutus-pab,
    prettyprinter,
    purescript-bridge,
    req,
    servant-server -any,
    text -any,
    row-types,
    uuid,
    utf8-string,
    warp

executable plutus-use-cases-scripts
    main-is: Main.hs
    hs-source-dirs:
        scripts
        src/test
    default-language: Haskell2010
    default-extensions: ImportQualifiedPost
    other-modules:
        Spec.Oracle
    ghc-options: -Wall -Wnoncanonical-monad-instances
                 -Wincomplete-uni-patterns -Wincomplete-record-updates
                 -Wredundant-constraints -Widentities -rtsopts
                 -- See Plutus Tx readme
                 -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    build-depends:
        base >= 4.9 && <5,
        aeson -any,
        plutus-starter,
        bytestring -any,
        sort,
        cardano-crypto-class -any,
        containers -any,
        data-default -any,
        flat -any,
        freer-extras -any,
        hedgehog -any,
        prettyprinter -any,
        QuickCheck -any,
        tasty -any,
        tasty-hunit -any,
        tasty-golden -any,
        tasty-quickcheck -any,
        text -any,
        lens -any,
        mtl -any,
        row-types -any,
        freer-simple -any,
        foldl -any,
        streaming -any,
        directory -any,
        filepath -any,
        serialise -any,
        plutus-core -any,
        plutus-ledger-api -any,
        plutus-tx -any,
        plutus-contract -any,
        plutus-chain-index-core -any,
        plutus-ledger -any,
        plutus-use-cases -any,
        optparse-applicative -any,
        aeson-pretty -any,
        cardano-api -any,
        cardano-binary -any,
        cborg -any,
        memory -any