name: backend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , aeson
               , aeson-gadt-th
               , common
               , constraints-extras
               , clientsession
               , dependent-sum
               , dependent-sum-template
               , frontend
               , groundhog
               , groundhog-postgresql
               , monad-control
               , monad-logger
               , monoidal-containers
               , obelisk-backend
               , obelisk-route
               , resource-pool
               , rhyolite-common
               , rhyolite-backend
               , rhyolite-backend-db
               , rhyolite-backend-db-gargoyle
               , text
  exposed-modules:
    Backend
    Backend.Notification
    Backend.RequestHandler
    Backend.Schema
    Backend.ViewSelector
  ghc-options: -Wall

executable backend
  main-is: main.hs
  hs-source-dirs: src-bin
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , backend
               , common
               , frontend
               , obelisk-backend
