cabal-version:          2.4
name:                   middleware
version:                0.1.0.0
author:                 BinarApps
maintainer:             BinarApps

library
    hs-source-dirs:     src
    exposed-modules:    Middleware.App
                      , Middleware.API
                      , Middleware.Capability.Config
                      , Middleware.Capability.CORS
                      , Middleware.Capability.ReqIdGen
                      , Middleware.Capability.Retry
                      , Middleware.Capability.Time
                      , Middleware.Capability.Error
                      , Middleware.Dex
                      , Middleware.Dex.Types
                      , Middleware.PabClient
                      , Middleware.PabClient.API
                      , Middleware.PabClient.Types

    build-depends:      aeson
                      , base
                      , co-log
                      , co-log-core
                      , co-log-polysemy
                      , co-log-polysemy-formatting
                      , conferer
                      , conferer-dhall
                      , conferer-warp
                      , deepseq
                      , dex
                      , either
                      , errors
                      , exceptions
                      , formatting >= 7.1.3
                      , mtl
                      , polysemy
                      , polysemy-plugin
                      , plutus-pab -any
                      , plutus-ledger -any
                      , retry
                      , servant
                      , servant-client
                      , servant-polysemy
                      , servant-server
                      , text
                      , uuid
                      , wai
                      , wai-cors
                      , warp

    default-language:   Haskell2010
    ghc-options:        -O2 -flate-specialise -fspecialise-aggressively
  --  ghc-options:        -Werror -Wall -- temporary disabled

    default-extensions: ScopedTypeVariables
                      , FlexibleContexts
                      , GADTs
                      , PolyKinds
                      , TemplateHaskell
                      , TypeApplications
                      , DataKinds
                      , LambdaCase
                      , RankNTypes
                      , TypeOperators
                      , TypeFamilies

executable middleware-manual
    main-is:            Main.hs
    build-depends:      base ^>=4.14.1.0
                      , middleware
    hs-source-dirs:     app
    default-language:   Haskell2010
